# tock

./: Cargo.toml  build.rs  flake.nix  shell.nix
.cargo/: config
arch/cortex-m3/: build.rs
arch/rv32i/: Cargo.toml
arch/rv32i/src/: csr.rs  lib.rs  plic.rs  syscall.rs
arch/rv32i/src/csr/: mcause.rs  mip.rs  mod.rs  mscratch.rs
boards/: Makefile.common  kernel_layout.ld
boards/arty-e21/: layout.ld
boards/hifive1/: Cargo.toml  Makefile  build.rs  config  layout.ld  riscv32ima-unknown-none-elf.json
boards/hifive1/riscv32ima-unknown-none-elf/: .hash
boards/hifive1/riscv32ima-unknown-none-elf/debug/: hifive1.d
boards/hifive1/riscv32ima-unknown-none-elf/debug/.fingerprint/bare-metal-243614c76313db63/: lib-bare_metal-243614c76313db63  lib-bare_metal-243614c76313db63.json
boards/hifive1/riscv32ima-unknown-none-elf/debug/.fingerprint/bare-metal-4aae30f16042d423/: run-build-script-build_script_build-4aae30f16042d423
boards/hifive1/riscv32ima-unknown-none-elf/debug/.fingerprint/bare-metal-5566467d5743d883/: lib-bare_metal-5566467d5743d883  lib-bare_metal-5566467d5743d883.json
boards/hifive1/riscv32ima-unknown-none-elf/debug/.fingerprint/bare-metal-dbfce769bedc6fd8/: run-build-script-build_script_build-dbfce769bedc6fd8.json
boards/hifive1/riscv32ima-unknown-none-elf/lib/: core-96c0f93ac705e7a1.d
boards/hifive1/riscv32ima-unknown-none-elf/release/: libcompiler_builtins.d  libcore.d
boards/hifive1/src/: main.rs
chips/e310x/src/: chip.rs
kernel/src/: process.rs
kernel/src/common/: mod.rs
libraries/riscv-csr/src/: csr.rs
(+1307 files in other folders)
